--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.21",
-    "expo-app-loading": "^2.1.1",
     "expo-clipboard": "^6.0.3",
     "expo-font": "^12.0.9",
     "expo-google-fonts": "^0.0.0",
@@ -27,6 +26,7 @@
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
