--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.21",
     "expo-clipboard": "^6.0.3",
     "expo-font": "^12.0.9",
@@ -25,9 +26,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.17.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
