--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "sdk": "^0.5.0",
     "tailwind-rn": "^4.2.0",
     "typescript": "~5.3.3"
   },
