--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -33,7 +33,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "sdk": "^0.5.0",
+    "sdk": "^0.0.0",
     "tailwind-rn": "^4.2.0",
     "typescript": "~5.3.3"
   },
