--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -62,3 +62,5 @@ MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
 MYAPP_RELEASE_STORE_PASSWORD=your-key-store-password
 MYAPP_RELEASE_KEY_PASSWORD=your-key-password
+
+expo.jsEngine=jsc
