--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "paardrunner",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
-    "expo": "~51.0.26",
+    "expo": "^51.0.30",
     "expo-clipboard": "~6.0.3",
-    "expo-dev-client": "~4.0.22",
+    "expo-dev-client": "~4.0.24",
     "expo-font": "~12.0.9",
     "expo-google-fonts": "^0.0.0",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.22",
+    "expo-updates": "~0.25.23",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
