--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-color-picker": "^0.6.0",
+    "react-native-color-wheel": "^0.1.7",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
@@ -36,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-wheel-color-picker": "^1.3.1",
     "tailwind-rn": "^4.2.0",
     "typescript": "~5.3.3"
   },
