--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "PaardRunner",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/fridge/ipa.png",
+    "icon": "./assets/Paardlogonobc.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/fridge/ipa.png",
+      "image": "./assets/Paardlogonobc.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,13 +16,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/fridge/ipa.png",
+        "foregroundImage": "./assets/Paardlogonobc.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.memonik.PaardRunner"
     },
     "web": {
-      "favicon": "./assets/fridge/ipa.png"
+      "favicon": "./assets/Paardlogonobc.png"
     },
     "extra": {
       "eas": {
