--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-color": "^0.0.10",
     "react-native-color-picker": "^0.6.0",
     "react-native-color-wheel": "^0.1.7",
     "react-native-draggable-flatlist": "^4.0.1",
