--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "expo": "^51.0.30",
+    "expo-av": "^14.0.7",
     "expo-clipboard": "~6.0.3",
     "expo-dev-client": "~4.0.24",
     "expo-font": "~12.0.9",
