--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/slider": "^4.5.2",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -23,10 +26,14 @@
     "expo-dev-client": "~4.0.24",
     "expo-font": "~12.0.9",
     "expo-google-fonts": "^0.0.0",
+    "expo-image-manipulator": "^12.0.5",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.23",
+    "firebase": "^10.13.2",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
+    "pako": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -46,6 +53,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
     "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-zip-archive": "^7.0.1",
     "tailwind-rn": "^4.2.0",
     "typescript": "~5.3.3"
   },
